# test_proxy

./: .env.example  .gitignore  docker-compose.yaml  pyproject.toml
app1/: Dockerfile  config.py  main.py
app1/endpoints/: auth.py  payment.py
app1/models/: auth.py  payment.py
app1/security/: dependencies.py  token.py  utils.py
app2/: Dockerfile  config.py  main.py
app2/endpoints/: transfer.py
app2/security/: dependencies.py
contracts/: money_transfer.py
proxy/: Dockerfile  config.py  main.py  middleware.py
proxy/endpoints/: transfer_proxy.py
secrets/: vault_token.txt.example
splunk/: Dockerfile
vault/scripts/: vault_init.sh
